@@ -1,5 +1,6 @@
 In-Flight Waypoints 1.2.2
 - Improved calculation of distance to waypoint - now uses the distance along the planet (instead of through the planet).  (Thanks Peppie23)
+- Display ETA to waypoint.  (Thanks Peppie23)
 
 In-Flight Waypoints 1.2.1
 - Don't display dummy waypoints from orbits.
